--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+exclude: [README.md, LICENSE, node_modules, npm-debug.log, Gulpfile.js, package.json]
+
 # comment
 author:
     name: Julian Giesen
