--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ author:
 title: juliangiesen.de
 url: http://juliangiesen.de
 description: Portfolio website of Julian Giesen	
-copyright: 2014&mdash;2015
+copyright: 2015
 baseurl: /
 
 github:
