--- a/_config.yml
+++ b/_config.yml
@@ -21,4 +21,4 @@ copyright: 2015
 baseurl: /
 
 github:
-  repo: https://github.com/dmies/dmies.github.io
+  repo: https://github.com/rikushan/rikushan.github.io
