--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ author:
     name: Julian Giesen
 
 # setup
-title: juliangiesen.de
-url: http://juliangiesen.de
+title: www.juliangiesen.de
+url: http://www.juliangiesen.de
 description: Portfolio website of Julian Giesen	
 copyright: 2015
 baseurl: /
